--- a/front-end/readable/package.json
+++ b/front-end/readable/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.2.2",
+    "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
     "@types/react-redux": "^6.0.9",
-    "contentful": "^7.0.4",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "contentful": "^7.0.5",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-material-ui": "0.0.1",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.1",
     "react-redux-loading": "^1.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "3.1.0",
+    "react-scripts-ts": "^4.0.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
@@ -24,10 +24,10 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.5",
-    "@types/node": "^10.11.7",
-    "@types/react": "^16.4.16",
+    "@types/jest": "^23.3.9",
+    "@types/node": "^10.12.9",
+    "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.6"
   }
 }
